--- a/interatcivebox.css
+++ b/interatcivebox.css
@@ -14,15 +14,15 @@
   color: #ff6b82;
   font-weight: 600;
   top: -25px;
-  margin-left: 120px;
-  width: 250px;
-  font-size: 25px;
+  margin-left: 115px;
+  width: 180px;
+  font-size: 20px;
   background-color: white;
 }
 .radioboxContainer {
   position: relative;
   border: 2px solid #e3e3e3;
-  padding: 35px;
+  padding: 30px;
   margin: 10px;
   cursor: pointer;
 }
@@ -56,46 +56,46 @@ input[type="radio"]:checked:after {
   border: 2px solid #ff6b82;
 }
 .unit {
-  font-size: 18px;
-  font-weight: bold;
-  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  font-family: "Arial", sans-serif;
   margin-left: 10px;
   position: relative;
   top: -7px;
 }
-.legend {
+div.legend {
+  --ribbon-size: 0.6em;
+  --ribbon-size-negative: calc(var(--ribbon-size) * -1);
   position: absolute;
-  top: -11px;
-  left: 270px;
-  text-align: center;
-  width: 150px;
-  padding: 5px 0;
-  border: 1px solid #ff6b82;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
+  top: 0;
+  right: var(--ribbon-size);
+  transform: translateY(var(--ribbon-size-negative));
+  font-size: 0.75em;
+  font-weight: 600;
+  z-index: 0;
+}
+
+div.legend::before {
+  content: "";
+  border-width: var(--ribbon-size);
+  border-style: solid;
+  border-color: transparent transparent #d7445b transparent;
+  position: absolute;
+  top: var(--ribbon-size-negative);
+  left: var(--ribbon-size-negative);
+  right: var(--ribbon-size-negative);
+  z-index: 0;
+}
+
+div.legend::after {
+  content: "MOST POPULAR";
   background-color: #ff6b82;
-  font-weight: bold;
-  font-family: "Arial", sans-serif;
-  color: white;
-  font-size: 16px;
-}
-.triangle1 {
-  width: 0;
-  height: 0;
-  position: absolute;
-  right: 188px;
-  top: -10.6px;
-  border-left: 9.6px solid transparent;
-  border-bottom: 11px solid #e14d64;
-}
-.triangle2 {
-  width: 0;
-  height: 0;
-  position: absolute;
-  right: 27.5px;
-  top: -10.6px;
-  border-right: 10px solid transparent;
-  border-bottom: 11px solid #e14d64;
+  color: #ffffff;
+  border-radius: 0 0 0.3em 0.3em;
+  display: block;
+  padding: 0.5em 1em;
+  position: relative;
+  z-index: 1;
 }
 .offer {
   margin-left: 5px;
@@ -107,35 +107,45 @@ input[type="radio"]:checked:after {
   font-family: sans-serif;
   position: relative;
   top: -7px;
+  font-size: 12px;
 }
 .price {
   float: right;
   margin-left: 120px;
-  font-family: sans-serif;
+  font-family: "Arial", sans-serif;
+  font-size: 14.46px;
   position: relative;
-  top: -7px;
+  /* top: -7px; */
 }
 .discountPrice {
-  font-size: 20px;
+  font-size: 14.46px;
   font-weight: 600;
 }
 .actualPrice {
+  font-weight: 400;
   text-decoration: line-through;
   margin-top: 5px;
-  font-size: 15px;
+  font-size: 10px;
   color: #e3e3e3;
 }
 .dropdownTitle {
   font-family: sans-serif;
   display: flex;
   align-items: center;
-  font-size: 15px;
-  gap: 20px;
-  margin-left: 25px;
+  font-size: 13px;
+  font-weight: 400;
+  gap: 25px;
+  margin-left: 22px;
 }
 .dropdown {
   display: flex;
+  justify-content: flex-start;
+  align-items: center;
   gap: 10px;
+}
+.dropdown > label {
+  font-size: 13px;
+  font-weight: 400;
 }
 .dropdownTitle + .dropdown {
   margin-bottom: 15px;
@@ -165,17 +175,6 @@ input[type="radio"]:checked:after {
   top: -7px;
 }
 
-.discountPrice {
-  font-size: 20px;
-  font-weight: 600;
-}
-.actualPrice {
-  text-decoration: line-through;
-  margin-top: 5px;
-  font-size: 15px;
-  color: rgb(188, 187, 187);
-}
-
 .unitsection {
   display: flex;
   align-items: flex-start;
@@ -187,60 +186,52 @@ input[type="radio"]:checked:after {
   padding-top: 4px;
   padding-bottom: 4px;
 }
-.freeDeleivery {
-  color: #ff6b82;
-}
 .totalDelivery {
   display: flex;
   margin: 12px;
   font-family: "Arial", sans-serif;
-  font-size: 18px;
+  font-size: 14px;
+  font-weight: 500;
   justify-content: space-between;
+}
+.freeDeleivery {
+  font-weight: 500;
+  color: #ff6b82;
+}
+.total {
+  font-size: 14px;
+  font-weight: 500;
 }
 .button {
   display: flex;
   gap: 10px;
   justify-content: center;
   align-items: center;
-  font-size: 16px;
+  font-size: 12px;
+  font-weight: 500;
   font-family: sans-serif;
   border: 1px solid #ff6b82;
   border-radius: 4px;
   background-color: #ff6b82;
   color: white;
-  padding: 10px 20px;
+  padding: 10px 0;
   margin: 10px;
   cursor: pointer;
 }
 .plus {
-  font-size: 25px;
+  font-size: 20px;
 }
 .pumper {
   font-style: italic;
   text-align: end;
   margin: 10px;
+  font-size: 12px;
   color: #a6a6a6;
   font-family: "Arial", sans-serif;
+  font-weight: 400;
+  margin-top: -5px;
 }
 
-@media only screen and (max-width: 1015px) {
-  .legend {
-    position: absolute;
-    top: -11px;
-    left: 270px;
-    text-align: center;
-    width: 150px;
-    padding: 5px 0;
-    border: 1px solid #ff6b82;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    background-color: #ff6b82;
-    font-weight: bold;
-    font-family: "Arial", sans-serif;
-    color: white;
-    font-size: 16px;
-  }
-}
 @media only screen and (max-width: 700px) {
   .headingContent {
     position: relative;
@@ -249,9 +240,9 @@ input[type="radio"]:checked:after {
     color: #ff6b82;
     font-weight: 600;
     top: -25px;
-    margin-left: 65px;
-    width: 250px;
-    font-size: 25px;
+    margin-left: 80px;
+    width: 180px;
+    font-size: 22px;
     background-color: white;
   }
   .radioboxContainer {
@@ -268,22 +259,6 @@ input[type="radio"]:checked:after {
     position: relative;
     top: -5px;
   }
-  .legend {
-    position: absolute;
-    top: -11px;
-    left: 200px;
-    text-align: center;
-    width: 150px;
-    padding: 5px 0;
-    border: 1px solid #ff6b82;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    background-color: #ff6b82;
-    font-weight: bold;
-    font-family: "Arial", sans-serif;
-    color: white;
-    font-size: 16px;
-  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -294,9 +269,9 @@ input[type="radio"]:checked:after {
     color: #ff6b82;
     font-weight: 600;
     top: -25px;
-    margin-left: 50px;
-    width: 250px;
-    font-size: 25px;
+    margin-left: 70px;
+    width: 180px;
+    font-size: 20px;
     background-color: white;
   }
   .price {
@@ -306,121 +281,14 @@ input[type="radio"]:checked:after {
     position: relative;
     top: -4px;
   }
-  .legend {
-    position: absolute;
-    top: -11px;
-    left: 175.5px;
-    text-align: center;
-    width: 150px;
-    padding: 5px 0;
-    border: 1px solid #ff6b82;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    background-color: #ff6b82;
-    font-weight: bold;
-    font-family: "Arial", sans-serif;
-    color: white;
-    font-size: 16px;
-  }
 }
 
-@media only screen and (max-width: 400px) {
-  .price {
-    float: right;
-    margin-left: 25px;
-    font-family: sans-serif;
-    position: relative;
-    top: -29px;
-  }
-  .legend {
-    position: absolute;
-    top: -11px;
-    left: 159px;
-    text-align: center;
-    width: 150px;
-    padding: 5px 0;
-    border: 1px solid #ff6b82;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    background-color: #ff6b82;
-    font-weight: bold;
-    font-family: "Arial", sans-serif;
-    color: white;
-    font-size: 16px;
-  }
-}
-@media only screen and (max-width: 370px) {
-  .price {
-    float: right;
-    margin-left: 25px;
-    font-family: sans-serif;
-    position: relative;
-    top: -29px;
-  }
-  .legend {
-    position: absolute;
-    top: -11px;
-    left: 140px;
-    text-align: center;
-    width: 150px;
-    padding: 5px 0;
-    border: 1px solid #ff6b82;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    background-color: #ff6b82;
-    font-weight: bold;
-    font-family: "Arial", sans-serif;
-    color: white;
-    font-size: 16px;
-  }
-}
-@media only screen and (max-width: 360px) {
-  .price {
-    float: right;
-    margin-left: 25px;
-    font-family: sans-serif;
-    position: relative;
-    top: -5px;
-  }
-  .legend {
-    position: absolute;
-    top: -11px;
-    left: 130px;
-    text-align: center;
-    width: 150px;
-    padding: 5px 0;
-    border: 1px solid #ff6b82;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    background-color: #ff6b82;
-    font-weight: bold;
-    font-family: "Arial", sans-serif;
-    color: white;
-    font-size: 16px;
-  }
-}
 @media only screen and (max-width: 350px) {
   .price {
     float: right;
     margin-left: 25px;
     font-family: sans-serif;
     position: relative;
-    top: -29px;
-  }
-  .legend {
-    position: absolute;
-    top: -11px;
-    left: 118px;
-    text-align: center;
-    width: 150px;
-    padding: 5px 0;
-    border: 1px solid #ff6b82;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-    background-color: #ff6b82;
-    font-weight: bold;
-    font-family: "Arial", sans-serif;
-    color: white;
-    font-size: 16px;
+    top: -25px;
   }
 }
